Fixes #539: Lyrics, artist info and collection screens show scrollbars when too small

--- a/src/css/angular-material-mods.scss
+++ b/src/css/angular-material-mods.scss
@@ -109,6 +109,10 @@
 
 // Drawer
 // -----------------------------------------------------------------------------------------------------------------------------------------
+.mat-drawer-content {
+    overflow: unset !important;
+}
+
 .mat-drawer-backdrop.mat-drawer-shown {
     background: rgba(var(--theme-rgb-base), 1) !important;
 }
